Resume - adding external links

--- a/_source/templates/pages/resume.mustache
+++ b/_source/templates/pages/resume.mustache
@@ -29,7 +29,7 @@
 
 					<br>
 
-					<h4><span class="company-name">Mad*Pow</span>
+					<h4><span class="company-name">Mad*Pow <a href="http://madpow.com"><i class="fa fa-external-link"></i></a></span>
 						Managing Director of Creative Technology | 2012-Present</h4>
 					<ul>
 						<li>Mentored Creative Technologists, helping to set personal goals and nurture individual talents</li>
@@ -39,7 +39,7 @@
 
 					<br>
 
-					<h4><span class="company-name">Girl Develop It</span>
+					<h4><span class="company-name">Girl Develop It <a href="http://girldevelopit.com/boston"><i class="fa fa-external-link"></i></a></span>
 						Chapter Leader | 2013-2015</h4>
 					<ul>
 						<li>Helped create the first Boston-based chapter of a national non-profit focused on providing affordable and accessible coding classes to women.</li>
@@ -48,7 +48,7 @@
 
 					<br>	
 					
-					<h4><span class="company-name">Isobar</span>
+					<h4><span class="company-name">Isobar <a href="http://isobar.com"><i class="fa fa-external-link"></i></a></span>
 						Interactive Developer | 2011-2012</h4>
 					<ul>
 						<li>Developed websites using HTML and CSS.</li>
@@ -58,7 +58,7 @@
 
 					<br>		
 					
-					<h4><span class="company-name">Connelly Partners</span>
+					<h4><span class="company-name">Connelly Partners <a href="http://connellypartners.com"><i class="fa fa-external-link"></i></a></span>
 						Web Designer/Developer | 2008-2011</h4>
 					<ul>
 						<li>Developed websites using HTML and CSS. Majority of work was code-to-comp, with emphasis on pixel-perfect design.</li>
