Added some recent projects

--- a/_source/templates/pages/nitty-gritty.mustache
+++ b/_source/templates/pages/nitty-gritty.mustache
@@ -19,40 +19,39 @@
 		<div class="content">
 
 			<h2>Nitty Gritty Details</h2>	
-			<p>Since you're here, you must be curious about how I built this website. Or you just like clicking tiny, obscure links. Here are some details about how I built this thing:</p>
+			<p>Wondering how I code? Here's what I used to build this site.*</p>
 			<br>
 			<h3>Technologies</h3>
 			<ul>
-				<li>I'm using HTML 5 and CSS 3.</li>
-				<li>The site is built with responsive practices, because it would be totally rude of me to assume you're on a desktop computer.</li>
-				<li>To help support older browsers, I use a PostCSS plugin called <a href="https://github.com/postcss/autoprefixer">Autoprefixer</a> to parse my CSS and add vendor prefixes. I think it's magic.</li>
-				<li>Pages are split up into templates with <a href="https://mustache.github.io/">Mustache</a>. It just seems silly to re-type a footer dozens of times if you can easily avoid it.</li>			
-				<li>I like to use SCSS whenever I can, because it's easy to use and saves me tons of time. I have no diehard feelings between SCSS and LESS. I use SCSS because it works well and does what I need it to do.</li>
-				<li>I use <a href="http://susy.oddbird.net">SUSY</a> tools to get a head start on responsive grids. I like it because it is lightweight and gives me full control over the look and feel of my site.</li>
-				<li>My other favorite CSS tool is <a href="http://bourbon.io">Bourbon</a>, but I kept SUSY because that's what I started to build this site with before I knew about Bourbon.</li>
-				<li>I used Grunt to compile my SCSS, my templates, and get the site all buttoned up for launch.</li>
-				<li>My text editor is Sublime Text 2.</li>
+				<li>HTML5 and CSS3 with SCSS. Mobile-first and responsive.</li>
+				<li><a href="https://handlebarsjs.com/">Handlebars JS</a> with <a href="https://mustache.github.io/">Mustache</a> for dynamic elements and templating.</li>			
+				<li>PostCSS <a href="https://github.com/postcss/autoprefixer">Autoprefixer</a> to parse my CSS and add vendor prefixes. </li>
+				<li><a href="http://susy.oddbird.net">SUSY</a> for pre-structuring responsive grids.</li>
+				<li><a href="https://gruntjs.com/">Grunt</a> as my Javascript task runner to compile everything.</li>
+				<li><a href="https://www.sublimetext.com/">Sublime Text 2</a> for text editing.</li>
 			</ul>
+			<p>* Please note that at the time, all these technologies were "modern". So if you're reading this in the year 2050, you may be having a good laugh!</p>
 
-			<br>
-			<h3>Old and Scary Stuff</h3>
-			<p>Here are past versions of my portfolio site. I like keeping these around because frankly they make me laugh. But in all seriousness, I think it's healthy to keep old versions of your code so you can understand not only how much <em>you've</em> changed, but also to be reminded of how quickly technology changes.</p>
-			<br>
+			<div style="display: none;">
+				<br>
+				<h3>Archive (pre-2016)</h3>
+				<p>Here are past versions of my portfolio site. I like keeping these around because frankly they make me laugh. But in all seriousness, I think it's healthy to keep old versions of your code so you can understand not only how much <em>you've</em> changed, but also to be reminded of how quickly technology changes.</p>
+				<br>
 
-			<div class="projects-container">
-				<div class="project">
-					<figure>
-						<div class="img-container">
-							<a href="http://arabasz.com/oldie-2016/index.php"><img src="assets/img/projects/tb-arabasz-01.jpg" alt="Old arabasz.com thumbnail image"></a>
-						</div>
-						<figcaption>
-							<h4>Online from 2010-2016</h4>			  				
-							<p><a href="http://arabasz.com/oldie-2016/index.php">View archived site<span class="fa fa-arrow-circle-right"></span></a></p>			  				
-						</figcaption>
-					</figure>			  			
-				</div>
-
-			</div>			
+				<div class="projects-container">
+					<div class="project">
+						<figure>
+							<div class="img-container">
+								<a href="http://arabasz.com/oldie-2016/index.php"><img src="assets/img/projects/tb-arabasz-01.jpg" alt="Old arabasz.com thumbnail image"></a>
+							</div>
+							<figcaption>
+								<h4>Arabasz.com (v. 2010-2016)</h4>			  				
+								<p><a href="http://arabasz.com/oldie-2016/index.php">View archived site<span class="fa fa-arrow-circle-right"></span></a></p>			  				
+							</figcaption>
+						</figure>			  			
+					</div>
+				</div>	
+			</div>		
 
 		</div>
 
