--- a/_source/templates/pages/project-hxr.mustache
+++ b/_source/templates/pages/project-hxr.mustache
@@ -29,13 +29,16 @@
 				<p>The Heathcare Experience Design Conference is an annual event that focuses on improving health experiences through technology and design.</p>
 				<p>For the website, it was important to create an experience that could easily be maintained and updated by several content teams. Squarespace was chosen because of its low barrier to entry and quick set-up time. A custom theme was created to reflect the HXD brand.</p>
 
-				<p><a href="http://www.hxrefactored.com"><span class="fa fa-external-link icon-margin-right"></span>http://www.hxrefactored.com</a></p>
+				<p><strike><a href="http://www.hxrefactored.com"><span class="fa fa-external-link icon-margin-right"></span>http://www.hxrefactored.com</a></strike></p>
+
+				<p><a href="https://web.archive.org/web/20171113085344/http://www.hxrefactored.com"><span class="fa fa-external-link icon-margin-right"></span>https://web.archive.org/web/20171113085344/http://www.hxrefactored.com/</a></p>
+				<p>(Original site was taken offline in 2013.)</p>
 
 				<br>
 
 				<h3>Screenshots</h3>
 				<figure class="project-screenshot">
-					<a href="http://www.hxrefactored.com"><img src="assets/img/projects/full-hxr-01.png" alt="HXR website screenshot"></a>
+					<a href="assets/img/projects/full-hxr-01.png"><img src="assets/img/projects/full-hxr-01.png" alt="HXR website screenshot"></a>
 				</figure>
 
 		</div>
