--- a/_source/templates/pages/resume.mustache
+++ b/_source/templates/pages/resume.mustache
@@ -21,54 +21,29 @@
 			<section class="skills">
 				<h2>Résumé</h2>
 				<p>Here you'll find a summary of my professional experience. You can also download my résumé in .PDF format using the link below.
-				<p><a href="assets/resume-arabasz-2016.pdf"><span class="fa fa-file-pdf-o icon-margin-right"></span>PDF download</a></p>
+				<p><a href="https://docs.google.com/document/d/10BAPJk5CCfoAgxhs-HitiQazVOb2iH9KFSdwtG98NoM/export?format=pdf"><span class="fa fa-file-pdf-o icon-margin-right"></span>PDF download</a></p>
 				<br>
 
-				<section class="skills-group work-experience">
+<section class="skills-group work-experience">
 					<h3>Work Experience</h3>
+
+					<h4><span class="company-name">Cake <a href="http://joincake.com"><i class="fa fa-external-link"></i></a></span>
+						Principal Front End Developer | 2018-2023</h4>
 
 					<br>
 
 					<h4><span class="company-name">Mad*Pow <a href="http://madpow.com"><i class="fa fa-external-link"></i></a></span>
-						Managing Director of Creative Technology | 2012-Present</h4>
-					<ul>
-						<li>Mentored Creative Technologists, helping to set personal goals and nurture individual talents</li>
-						<li>Developed websites using HTML, CSS and JavaScript with responsive/mobile-first design practices</li>
-						<li>Regularly client-facing, attending pitches for new business as a technology subject matter expert</li>						
-					</ul>
-
+						Managing Director of Creative Technology | 2012-2018</h4>
 					<br>
 
 					<h4><span class="company-name">Girl Develop It <a href="http://girldevelopit.com/boston"><i class="fa fa-external-link"></i></a></span>
-						Chapter Leader | 2013-2015</h4>
-					<ul>
-						<li>Helped create the first Boston-based chapter of a national non-profit focused on providing affordable and accessible coding classes to women.</li>
-						<li>Provided career mentorship to women making career switches to computer programming</li>
-					</ul>	
+						Chapter Leader | 2013-2015 (volunteer work) </h4>	
 
 					<br>	
 					
 					<h4><span class="company-name">Isobar <a href="http://isobar.com"><i class="fa fa-external-link"></i></a></span>
-						Interactive Developer | 2011-2012</h4>
-					<ul>
-						<li>Developed websites using HTML and CSS.</li>
-						<li>Contributed to the <a href="http://isobar-idev.github.io/code-standards">Isobar Front-end Code Standards Guide</a></li>
-						<li>Part of the first-prize-winning team at the <a href="https://vimeo.com/63663868">Create48</a> hackathon. Our team designed and built a simple Android app to address long waits at crowded bars.</li>
-					</ul>
-
-					<br>		
-					
-					<h4><span class="company-name">Connelly Partners <a href="http://connellypartners.com"><i class="fa fa-external-link"></i></a></span>
-						Web Designer/Developer | 2008-2011</h4>
-					<ul>
-						<li>Developed websites using HTML and CSS. Majority of work was code-to-comp, with emphasis on pixel-perfect design.</li>
-						<li>Spearheaded projects from initial design phases to website launch.</li>
-						<li>Communicated directly with clients via technical support and CMS training. Established self as a trusted technical advisor to internal management.</li>
-						<li>Mentored interns in best web practices and modern coding techniques. Focused on improving code quality and strengthening confidence.</li>
-					</ul>											
-
+						Interactive Developer | 2011-2012</h4>				
 				</section>
-
 				<section class="skills-group languages">
 					<h3>Skills</h3>
 
@@ -88,36 +63,39 @@
 									</li>
 									<li>JavaScript
 										<ul>
+											<li>React JS</li>
 											<li>jQuery</li>
-											<li>Grunt, Gulp</li>
 										</ul>
 									</li>
-									<li>NPM, Yeoman</li>
-									<li>Mustache.js</li>
-									<li>Responsive web design</li>
-									<li>Bootstrap, Foundation</li>
+									<li>NPM, Webpack</li>
+									<li>Yeoman, Grunt, Gulp, Yarn</li>
+									<li>Bootstrap</li>
+									<li>Chakra</li>
+									<li>Foundation</li>
 									<li>Wordpress</li>																		
-									<li>Git, version control</li>
-									<li>PHP (working knowledge)</li>					
+									<li>Git</li>					
 								</ul>								
 							</td>
 							<td>
 								<h4>Software</h4>
 								<ul class="list-skills">
-									<li>Adobe: Photoshop, InDesign, Lightroom</li>
-									<li>Eclipse, SpringTools</li>
+									<li>Visual Studio</li>
+									<li>Visual Studio Code</li>
 								</ul>	
 
 								<h4>Design</h4>
 								<ul class="list-skills">
+									<li>Figma</li>
+									<li>Adobe Photoshop</li>
+									<li>Adobe InDesign</li>
 									<li>UI wireframing and prototyping</li>
 									<li>Information architecture</li>
-									<li>Logos and brand identity</li>
+									<li>Logos and branding</li>
 								</ul>	
 
 								<h4>Other Skills</h4>						
 								<ul class="list-skills">
-									<li>Certified Scrum Product Owner (Certified 2016)</li>
+									<li>Certified Scrum Product Owner</li>
 									<li>Bilingual with fluency in Polish</li>
 								</ul>
 							</td>
@@ -128,28 +106,33 @@
 
 				<section class="skills-group">
 					<h3>Education</h3>
-
 					<br>
-
-
-					<h4>University of Massachusetts Dartmouth | 2004-2007</h4>
-					<p>BFA in Graphic Design and Letterform
-					<br>Minor in Business
-					<br>Graduated as <em>Magna Cum Laude</em></p>					
-
-					<h4>University of Hartford | 2003-2004 (Transfer)</h4>
-					<p>Visual Communication Design</p>
+					<h4>University of Massachusetts Dartmouth</h4>
+					<ul>
+						<li>BFA in Graphic Design</li>
+						<li>Minor in Business</li>
+						<li>Graduated as <em>Magna Cum Laude</em></li>	
+					</ul>
+				
+					<h4>University of Hartford</h4>
+					<ul>
+						<li>Graphic Design</li>
+					</ul>
 
 				</section>
 
 				<section class="skills-group">
-					<h3>Speaking Engagements</h3>
+					<h3>Speaking & Teaching Engagements</h3>
+					<br>
+					<h4>"Intro to Responsive Web Design"</h4>
+					<p>Bentley University <br>Presentation to 2018 UX Design undergraduate class</p>
+					<p><a href="https://www.slideshare.net/secret/8VxvY1M1PvAgrC"><span class="fa fa-external-link icon-margin-right"></span>View the slide deck.</a></p>	
 
 					<br>
-
 					<h4>"Responsive Design Process: Building the Real Web 2.0"</h4>
-					<p>UXPA Boston 2013, presented with Nick Snyder</p>
-					<p><a href="http://www.slideshare.net/AnnetteArabasz/uxpa-boston-2013-responsive-web-design-mad-pow"><span class="fa fa-external-link icon-margin-right"></span>View the slide deck.</a></p>						
+					<p>UXPA Boston 2013<br>
+					Presented with Nick Snyder</p>
+					<p><a href="https://www.slideshare.net/secret/F4ciYqjeCK6VB5"><span class="fa fa-external-link icon-margin-right"></span>View the slide deck.</a></p>						
 				</section>			
 			</section>			
 		</div>
