--- a/_source/templates/partials/projects.mustache
+++ b/_source/templates/partials/projects.mustache
@@ -2,6 +2,20 @@
 	<div class="project">
 		<figure>
 			<div class="img-container">
+				<a href="https://joincake.com"><img src="assets/img/projects/logo-cake.png" alt="Cake logo"></a>
+			</div>
+			<figcaption>
+				<h4>Cake</h4>
+				<p>Cake provides a digital platform that makes it easier to do advance care planning and end-of-life planning.</p>	
+				<p>(Project page coming soon.)</p>			  				
+				<p><a href="https://joincake.com">Direct link<span class="fa fa-arrow-circle-right"></span></a></p>			  				
+			</figcaption>
+		</figure>			  			
+	</div>
+
+	<div class="project">
+		<figure>
+			<div class="img-container">
 				<a href="project-espn.html"><img src="assets/img/projects/tb-espn-01.jpg" alt="ESPN website thumbnail image"></a>
 			</div>
 			<figcaption>
