--- a/_source/templates/pages/index.mustache
+++ b/_source/templates/pages/index.mustache
@@ -20,14 +20,14 @@
 
 			<section class="about">
 				<h2>About Me</h2>
-			  	<p>My name is Annette Arabasz and I am a Front End Developer in Boston. My background is in visual design, so I love projects where I can dig into aesthetics and usability. I currently work at <a href="http://madpow.com" target="_blank">Mad*Pow</a> as a managing director and developer.</p>
-			  	<p>Some of my other interests are beer sampling, collecting absurdly hot sauces and hiking with <a href="http://instagram.com/starbuck_the_corgi" target="_blank">Starbuck</a>, my awesome Corgi.</p>
-			  	<p>For details about my skills and experience, click <a href="resume.html">here</a>.</p>
+				<p>I'm a Front-End Developer in Boston offering 15+ years of coding expertise. My background is in Graphic Design, so I love working on projects that keep aesthetics, useability and accessibility in mind.</p>
+				<p>I'm passionate about tech inclusion and started the Boston chapter of <a href="https://www.girldevelopit.com" target="_blank">Girl Develop It</a>, a national non-profit teaching women how to code. I also enjoy speaking and teaching, having presented at <a href="http://uxpaboston.org" target="_blank">UXPA Boston</a> and <a href="http://bentley.edu" target="_blank">Bentley University</a>.</p>
+				<p>Some of my other interests are beer sampling, collecting absurdly hot sauces and hiking with <a href="http://instagram.com/starbuck_the_corgi" target="_blank">Starbuck</a>, my awesome Corgi.</p>
 			</section>
 
 			<section class="projects">
 			  	<h2>Projects</h2>
-			  	<p>Below are two projects that I have worked on recently. To see more projects, click <a href="projects.html">here</a>.</p>
+			  	<p>Below are some recent projects. To see more, go to <a href="projects.html">Projects</a>.</p>
 			  	<br>
 			  	{{> partials/projects }}		
 			</section>
