Updated intro text

--- a/_source/templates/pages/index.mustache
+++ b/_source/templates/pages/index.mustache
@@ -20,9 +20,10 @@
 
 			<section class="about">
 				<h2>About Me</h2>
-				<p>I'm a Front-End Developer in Boston offering 15+ years of coding expertise. My background is in Graphic Design, so I love working on projects that keep aesthetics, useability and accessibility in mind.</p>
-				<p>I'm passionate about tech inclusion and started the Boston chapter of <a href="https://www.girldevelopit.com" target="_blank">Girl Develop It</a>, a national non-profit teaching women how to code. I also enjoy speaking and teaching, having presented at <a href="http://uxpaboston.org" target="_blank">UXPA Boston</a> and <a href="http://bentley.edu" target="_blank">Bentley University</a>.</p>
-				<p>Some of my other interests are beer sampling, collecting absurdly hot sauces and hiking with <a href="http://instagram.com/starbuck_the_corgi" target="_blank">Starbuck</a>, my awesome Corgi.</p>
+				<p>I'm a Front-End Developer in Boston with over 15 years of coding experience. My background is in Graphic Design, so I thrive at the intersection of development and design (especially UX!)</p>
+				<p>I'm passionate about tech inclusion and started the Boston chapter of <a href="https://www.girldevelopit.com" target="_blank">Girl Develop It</a>, a national non-profit teaching women how to code. You might've also caught me presenting at UXPA Boston or Bentley University.</p>
+				<p>Beyond the pixels, you'll find me navigating the fiery world of hot sauces, indulging in craft beers or hiking with <a href="http://instagram.com/starbuck_the_corgi" target="_blank">Starbuck</a>, my sassy Corgi.</p>
+				<p><span class="fa fa-external-link icon-margin-right"></span><a href="https://github.com/annetters/" target="_blank">Github</a></p>
 			</section>
 
 			<section class="projects">
