Added new project page for 2023 projects

--- a/_source/templates/pages/connect.mustache
+++ b/_source/templates/pages/connect.mustache
@@ -24,9 +24,9 @@
 
 				<p><span class="fa fa-envelope icon-margin-right"></span>E-mail: <a href="mailto:annettea@gmail.com">annettea@gmail.com</a>
 				<br>
-				<span class="fa fa-github-alt icon-margin-right"></span>Github: <a href="https://github.com/anevaude">https://github.com/anevaude</a>
+				<span class="fa fa-github-alt icon-margin-right"></span>Github: <a href="https://github.com/annetters">https://github.com/annetters</a>
 				<br>				
-				<span class="fa fa-linkedin-square icon-margin-right"></span>LinkedIn: <a href="https://www.linkedin.com/in/annettearabasz">https://www.linkedin.com/in/annettearabasz</a></p>			
+				<span class="fa fa-linkedin-square icon-margin-right"></span>LinkedIn: <a href="https://www.linkedin.com/in/annette-arabasz/">https://www.linkedin.com/in/annette-arabasz/</a></p>			
 
 			</section>			
 		</div>
