--- a/_source/templates/pages/index.mustache
+++ b/_source/templates/pages/index.mustache
@@ -20,17 +20,15 @@
 
 			<section class="about">
 				<h2>About Me</h2>
-				<p>I'm a Front-End Developer in Boston with over 15 years of coding experience. My background is in Graphic Design, so I thrive at the intersection of development and design (especially UX!)</p>
+				<p>I'm a Front-End Developer in Boston with over 15 years of coding experience. My background is in Graphic Design, so I love working on projects that focus on user-friendliness and accessibility.</p>
 				<p>I'm passionate about tech inclusion and started the Boston chapter of <a href="https://www.girldevelopit.com" target="_blank">Girl Develop It</a>, a national non-profit teaching women how to code. You might've also caught me presenting at UXPA Boston or Bentley University.</p>
-				<p>Beyond the pixels, you'll find me navigating the fiery world of hot sauces, indulging in craft beers or hiking with <a href="http://instagram.com/starbuck_the_corgi" target="_blank">Starbuck</a>, my sassy Corgi.</p>
-				<p><span class="fa fa-external-link icon-margin-right"></span><a href="https://github.com/annetters/" target="_blank">Github</a></p>
-			</section>
+				<p>Beyond the pixels, you'll find me navigating the fiery world of hot sauces, indulging in craft beers or hiking with my Corgi <a href="http://instagram.com/starbuck_the_corgi" target="_blank">Starbuck</a>.</p>
+			</section> 
 
 			<section class="projects">
-			  	<h2>Projects</h2>
-			  	<p>Below are some recent projects. To see more, go to <a href="projects.html">Projects</a>.</p>
-			  	<br>
-			  	{{> partials/projects }}		
+			  	<h2 class="h3">My Work</h2>
+			  	<p>Below are some of the brands and companies I have worked with over the years. To see details about projects I have worked on, go to the <a href="projects.html">Projects</a> page.</p>
+			  	{{> partials/clients }}
 			</section>
 		</div>
 
