--- a/_source/templates/pages/projects.mustache
+++ b/_source/templates/pages/projects.mustache
@@ -20,16 +20,17 @@
 
 				<h2>Projects</h2>
 				<p>This page contains some recent examples of project work.</p>
-				<p>Please note that due to privacy agreements, not all of my work may be listed here. If there's a specific skill you would like to see an example of, please <a href="contact.html">contact me</a>.</p>
-				<br>
+				<p><em>Please note that due to privacy agreements, not all of my work may appear below. Please <a href="connect.html">contact me</a> if there is specific work you'd like examples of.</em></p>
+				<br />
 
-			  	{{> partials/projects }}	
+				<h3>Recent projects</h3>
+				{{> partials/project-list }}
 
-			  	<br>
-			  	<h2>Clients</h2>
-			  	<p>Below are some of the clients and brands I have worked with.</p>
+				<br />
 
-			  	{{> partials/clients }}
+				<h3>Older projects</h3>
+			  	{{> partials/project-highlights }}	
+
 
 		</div>
 
