--- a/_source/templates/partials/clients.mustache
+++ b/_source/templates/partials/clients.mustache
@@ -2,10 +2,10 @@
 	<div class="client">
 		<figure>
 			<div class="img-container">
-				<img src="assets/img/projects/logo-pearson-01.jpg" alt="Pearson Education logo">
+				<img src="assets/img/projects/logo-cake.png" alt="Cake logo">
 			</div>
 			<figcaption>
-				<h4>Pearson Education</h4>
+				<h4>Cake</h4>
 			</figcaption>
 		</figure>			  			
 	</div>
@@ -25,7 +25,7 @@
 				<img src="assets/img/projects/logo-fhm-01.jpg" alt="Fidelity Health Marketplace logo">
 			</div>
 			<figcaption>
-				<h4>Fidelity Health Marketplace</h4>
+				<h4>Fidelity Health</h4>
 			</figcaption>
 		</figure>			  			
 	</div>
