Updating file path

--- a/_source/templates/pages/index.mustache
+++ b/_source/templates/pages/index.mustache
@@ -20,7 +20,7 @@
 
 			<section class="about">
 				<h2>About Me</h2>
-				<p>I'm a UX Developer in Boston with over 15 years of coding experience. My background is in Graphic Design, and I've always loved working on human-centric projects that consider how people feel and think.</p> 
+				<p>I'm a UX Developer in Boston with over 15 years of coding experience. My background is in Graphic Design, and I love working on human-centric projects that consider how people feel and think.</p> 
 
 				<p>I'm passionate about tech inclusion and started the Boston chapter of <a href="https://www.girldevelopit.com" target="_blank">Girl Develop It</a>, a national non-profit offering affordable coding classes for women. You might've also caught me presenting at UXPA Boston or Bentley University.</p>
 
@@ -29,7 +29,7 @@
 
 			<section class="projects">
 			  	<h2 class="h3">Brands I've Worked With</h2>
-			  	<p>Below are some of the brands and companies I have worked with over the years. See <a href="projects.html">Projects</a> for work examples.</p>
+			  	<p>Below are some of the brands and companies I have worked with. See <a href="projects.html">Projects</a> for work examples.</p>
 			  	{{> partials/clients }}
 			</section>
 		</div>
