New projects added

--- a/_source/templates/pages/projects.mustache
+++ b/_source/templates/pages/projects.mustache
@@ -24,12 +24,12 @@
 				<br />
 
 				<h3>Highlighted projects</h3>
-				{{> partials/project-list }}
+				{{> partials/projects-main }}
 
 				<br />
 
 				<h3>Older projects</h3>
-			  	{{> partials/project-archives }}	
+			  	{{> partials/projects-archive }}	
 
 
 		</div>
