--- a/_source/templates/pages/project-espn-02.mustache
+++ b/_source/templates/pages/project-espn-02.mustache
@@ -29,7 +29,13 @@
   					<li>Foundation</li>  					
   				</ul>				
 
-				<p>A collection of sites summarizing the media partnership between ESPN and the Playstation Fiesta Bowl. Event sponsors would use the website to see photos and videos of how their brand was promoted during the event -- typically TV spots, in-game graphics, Twitter callouts and parties.</p> 
+				
+				<div class="pretty-thumbnail" style="background-color: #164281;"><img src="https://aa-portfolio.imgix.net/thumbnail-espn-01.png?w=536" alt="project screenshot">
+				</div>
+
+				<h3>Overview</h3>
+
+				<p>ESPN asked us to create the media partnership pages for their Fiesta Bowl games.Event sponsors would use the website to see photos and videos of how their brand was promoted during the event -- typically TV spots, in-game graphics, Twitter callouts and parties.</p> 
 				<p>The site hosted a large collection of media files from the event, including photos, videos and PDFs. Sponsors could also log in to a password-protected area to view marketing statistic documents.</p>
 				<p>The site was built using the Expression Engine CMS as the base, and Mustache and Foundation serving the front end.</p>
 
