--- a/_source/templates/pages/project-va.mustache
+++ b/_source/templates/pages/project-va.mustache
@@ -30,15 +30,18 @@
 
 				<br /> 
 
+				<div class="pretty-thumbnail" style="background-color: #9bc0d9;"><img src="https://aa-portfolio.imgix.net/thumbnail-va-01b.png?w=536" alt="project screenshot">
+				</div>
+
 				<h3>Overview</h3>
-				<p>In 2016, the VA maintained several apps for Veterans and clinicians. Over the years, many of these apps had become the responsibility of different groups using different UX patterns -- which not only created inefficiencies for the VA production teams but created a confusing experience for users.</p>
+				<p>In 2016, the VA had built several apps for use by Veterans and clinicians. Over the years, many of these apps became the responsibility of different groups that didn't work with each other on an everyday basis. There was no central reference for how a VA app should look and feel.</p>
 
 				<p>The VA asked Mad*Pow to do a heuristic evaluation of their app portfolio, taking inventory of inconsistencies such as different versions of a color or form elements. The deliverables included:</p>
 
 				<ul>
 					<li>Coded generic component and template library consisting of high-priority UI patterns </li>
 					<li>Component taxonomy guide to create a common language for what elements are called. (e.g. "modals" versus "pop-ups")</li>
-					<li>Written documentation contributions to the VA Human Factors Engineering (HFE) team’s UX Guide, describing industry best practices for usability and accessibility for each pattern</li>
+					<li>Written documentation contributions to the VA Human Factors Engineering (HFE) team’s UX Guide, detailing industry best practices for using for each pattern</li>
 				</ul>
 
 				<h3>Team & Role</h3>
