--- a/_source/templates/partials/projects-main.mustache
+++ b/_source/templates/partials/projects-main.mustache
@@ -1,14 +1,14 @@
 
 
-<div class="project-list">
+<div class="projects-main">
 
 	<div class="project">
 		<figure>
-			<div class="img-container">
-				<a href="project-cake-02.html"><img src="assets/img/projects/logo-cake.png" alt="Cake logo"></a>
+			<div class="img-container pretty-thumbnail" style="background-color: #7899c2;">
+				<a href="project-cake-02.html"><img src="https://aa-portfolio.imgix.net/thumbnail-cake-02.png?w=790" alt="Cake logo"></a>
 			</div>
 			<figcaption>
-				<h4><a href="project-cake-02.html">Cake: Creating a Fundraiser Tool</a></h4>
+				<h4><a href="project-cake-02.html">Cake: Creating an Intuitive Fundraising Tool for Memorial and Funeral Planners</a></h4>
 				<ul class="list-tags">
 					<li class="tag-design">UX</li>
 					<li class="tag-design">User flows</li>
@@ -19,7 +19,7 @@
   				</ul>		
 				<p>Designing and coding a new fundraising tool for Cake's Memorial tool using UX best practices.</p>	
 				<p><a href="project-cake-02.html">Read more<span class="fa fa-arrow-circle-right"></span></a></p>		  				
-			</figcaption>
+			</figcaption> 
 		</figure>			  			
 	</div>
 
@@ -29,7 +29,7 @@
 				<a href="project-cake-01.html"><img src="assets/img/projects/logo-cake.png" alt="Cake logo"></a>
 			</div>
 			<figcaption>
-				<h4><a href="project-cake-01.html">Cake: Redesign of the Core App</a></h4>
+				<h4><a href="project-cake-01.html">Cake: Using Design to Improve Trust, Credibility and Brand Presence</a></h4>
 				<ul class="list-tags">
 					<li class="tag-design">UX</li>
 					<li class="tag-design">Design</li>
@@ -52,7 +52,7 @@
 				<a href="project-va.html"><img src="assets/img/projects/logo-va.png" alt="VA logo"></a>
 			</div>
 			<figcaption>
-				<h4><a href="project-va.html">VA.gov: Responsive Design System</a></h4>
+				<h4><a href="project-va.html">VA.gov: Creating a Responsive Design System to Modernize the VA Clinician App Experience</a></h4>
 				<ul class="list-tags">
 					<li class="tag-design">Mobile</li>
 					<li class="tag-design">Design</li>
