--- a/_source/templates/pages/project-boa.mustache
+++ b/_source/templates/pages/project-boa.mustache
@@ -26,7 +26,7 @@
 					<li>jQuery</li>
 					<li class="tag-other">RWD</li>
   				</ul>	
-				<p><a href="https://arabasz.com/portfolio-web/boa-rwd/index.html" target="_blank"><span class="fa fa-external-link icon-margin-right"></span>https://arabasz.com/portfolio-web/boa-rwd/index.html</a></p>
+				<p><a href="assets/portfolio-web/boa-rwd/index.html" target="_blank"><span class="fa fa-external-link icon-margin-right"></span>Link to page</a></p>
 				<br /> 
 
 				<h3>Overview</h3>
@@ -59,7 +59,7 @@
 				<h3>Link</h3>
 				<p>The code for the project can be seen at the link below:</p>
 
-								<p><a href="https://arabasz.com/portfolio-web/boa-rwd/index.html" target="_blank"><span class="fa fa-external-link icon-margin-right"></span>https://arabasz.com/portfolio-web/boa-rwd/index.html</a></p>
+				<p><a href="assets/portfolio-web/boa-rwd/index.html" target="_blank"><span class="fa fa-external-link icon-margin-right"></span>Link to page</a></p>
 				
 		</div>
 
