Project links added.

--- a/_source/templates/pages/project-boa.mustache
+++ b/_source/templates/pages/project-boa.mustache
@@ -33,24 +33,26 @@
 				</div>
 
 				<h3>Overview</h3>
-				<p>In 2016, many websites were optimized for desktop-only. It was not uncommon for a user to visit a site on their phone to see either a broken experience or a "Please visit us on desktop" message.</p>
+				<p>In 2016, many websites were optimized for desktop-only. It was not uncommon for users to visit a site on their phone to see either a broken experience or a "Please visit us on desktop" message.</p>
 
 				<p>Bank of America knew it had to modernize, but it needed someone to prove that their complex banking tools could be translated to a mobile viewport.</p>
 							
 				<h3>Team & Role</h3>
-				<p>I served as a Creative Technologist on this project, coding the component library. I worked closely with the design team to ensure that anything we designed was feasible on mobile, reassessing the design as issues arose.</p>
+				<p>I was the Creative Technologist on this project, coding the component library. I worked closely with the design team to ensure that anything we designed was feasible on mobile, reassessing the design as issues arose.</p>
 
 				<p>The project involved two developers, one UX researcher, one UX designer, one visual designer and one client experience director.</p>
 
 				<h3>Process</h3>
-				<p>The design system was made with HTML5, CSS and some jQuery for interactions like carousels amd tabs. Feature detection and CSS fallbacks were addressed with Modernizer (<a href="https://modernizr.com/">https://modernizr.com</a>). 
+				<p>The design and developer teams worked together to sketch out how each element on the page can be broken down into a mobile equivalent. As we coded, we would often regroup and make adjustments to the design as we encounted blockers. </p>
+
+				<p>The design system was coded with HTML5, CSS, and some jQuery for interactions like carousels and tabs. Feature detection and CSS fallbacks were addressed with Modernizer (<a href="https://modernizr.com/">https://modernizr.com</a>). 
 				<br />
 
 				<h3>Results</h3>
-				<p>The deliverable was a responsive design system as well as six prototypes showing how some of Bank of America's most popular pages can be adapted from a desktop layout to being mobile-friendly.</p>
-				<p>The Bank of America team was excited to see that even the most complex elements of their page, like navigation and tables, <em>can</em> be build for a mobile screen.</p>
-				<p>
-				<p>I'm excited about this project because it served as a baseline for BoA's eventual full conversion to mobile-friendlinessm. Today, Bank of America's banking website is completely mobile-friendly, and I am proud to know that we helped play an important part in that.</p>
+				<p>The deliverable was a responsive design system and six prototypes showing how some of Bank of America's most popular pages can be adapted from a desktop layout into a mobile-friendly version.</p>
+
+				<p>The Bank of America team was excited to see that even the most complex elements of their page, like navigation and tables, <em>can</em> be built for a mobile screen.</p>
+
 
 				<h3>Screenshots</h3>
 
@@ -59,7 +61,9 @@
 					<figcaption>Screenshot of an account dashboard. <a href="https://aa-portfolio.imgix.net/boa-screenshot-01.png?h=1000">View larger</a></figcaption>
 				</figure>
 
-				<br /> <br />
+
+
+				<p>I'm excited about this project because it served as a baseline for BoA's eventual conversion to full mobile-friendliness. Today, Bank of America's banking website is completely mobile-friendly, and I am proud to know that we helped play an essential part in that.</p>
 
 				<h3>Link</h3>
 				<p>The code for the project can be seen at the link below:</p>
