--- a/_source/templates/pages/project-espn-02.mustache
+++ b/_source/templates/pages/project-espn-02.mustache
@@ -36,12 +36,12 @@
 
 				<h3>Overview</h3>
 
-				<p>A media partnership pages for the ESPN coverage of the Fiesta Bowl games. Event sponsors visited the site to review how their brand was promoted during the event -- including photos and videos of TV spots and signage.</p>
+				<p>ESPN needed a webpage to share the media sponsorship coverage of the Fiesta Bowl games. Event sponsors would use the site to review how their brand was promoted during the event -- including photos and videos of TV spots and signage.</p>
 
 
 				<h3>Code stack</h3>
 								
-				<p>It was important that the site for mobile-friendly, so I built the site using the Foundation framework. (Please note that if you preview the link, videos have been unlinked to save bandwidth.)</p>
+				<p>It was important that the site was mobile-friendly, so I built it using the Foundation framework. </p>
 				<ul>
 					<li>HTML</li>
 					<li>CSS</li>
