--- a/_source/templates/pages/project-va.mustache
+++ b/_source/templates/pages/project-va.mustache
@@ -34,9 +34,9 @@
 				</div>
 
 				<h3>Overview</h3>
-				<p>In 2016, the VA had built several apps for use by Veterans and clinicians. Over the years, many of these apps became the responsibility of different groups that didn't work with each other on an everyday basis. There was no central reference for how a VA app should look and feel.</p>
+				<p>In 2016, the VA maintained several apps for use by Veterans and clinicians. Over the years, many of these apps became the responsibility of different groups that didn't work with each other every day. There needed to be a central reference for how a VA app should look and feel.</p>
 
-				<p>The VA asked Mad*Pow to do a heuristic evaluation of their app portfolio, taking inventory of inconsistencies such as different versions of a color or form elements. The deliverables included:</p>
+				<p>The VA asked Mad*Pow to do a heuristic evaluation of their app portfolio, taking inventory of inconsistencies such as different versions of colors or form elements.</p>
 
 				<ul>
 					<li>Coded generic component and template library consisting of high-priority UI patterns </li>
