--- a/_source/templates/pages/project-cake-01.mustache
+++ b/_source/templates/pages/project-cake-01.mustache
@@ -34,7 +34,7 @@
 				</div>
 
 				<h3>Overview</h3>
-				<p>As an early-stage startup with a tiny team, the app had quickly evolved from a scrappy prototype to a tool that was being used by hundreds of users. We needed to move quickly to make the app look more polished and trustworthy.</p>
+				<p>As an early-stage startup with a tiny team, the app had evolved from a scrappy prototype to a tool that was used by hundreds of users. We needed to move quickly to make the app look more polished and trustworthy.</p>
 				
 				<p>As the company's first Front-end Developer, I had the exciting opportunity to suggest improvements for usability, mobile-friendliness, and overall appearance.</p>
 
@@ -45,20 +45,25 @@
 				<br />
 				
 				<h3>Global improvements</h3>
-				<p>Trust and safety were a top need for Cake users, who often uploaded sensitive documents and shared highly personal details about their end-of-life wishes. I felt it was important for the site to feel authentic and trustworthy.</p>
+				<p>Trust and safety were a key need for Cake users, who often uploaded sensitive documents and shared highly personal details about their end-of-life wishes. It was important for the site to feel authentic and trustworthy.</p>
 				
-				<p>I conducted a full evaluation with the goal of making the site look polished, cohesive and reflective of the company brand. Some highlights:</p>
+				<p>I conducted a complete evaluation with the goal of making the site look polished, cohesive and reflective of the company brand. Some highlights:</p>
 				<p>
 				<ul>
 					<li><strong>Brand Integration: </strong> Added the company logo to the navigation and used the brand's colors (light teal, dark teal, and cream) to make the website look more official and less like a prototype.</li>
-					<li><strong>Icon Tweaks:</strong> Updated box-like icons that resembled checkboxes, which could confuse users. Also, removed ambiguous category icons from the navigation.</li>
+					<li><strong>Icon Tweaks:</strong> Updated box-like icons that resembled checkboxes, which could confuse users. Also, I removed ambiguous category icons from the navigation.</li>
 					<li><strong>Simplified IA:</strong> As a developer, it was clear to me that the nav had grown over the years to accommodate a rapidly changing number of tools. I proposed a new sitemap addressing redundant or ambiguous links, merging the bulk of "Discover" links into a single parent named "Checklist".</li>
 				</ul>
 				</p>
 
+																<figure class="project-screenshot">
+	<a href="https://aa-portfolio.imgix.net/cake-card-sort-01.png?h=500"><img src="https://aa-portfolio.imgix.net/cake-card-sort-01.png?w=770" alt="sketch" class="add-border"></a>
+	<figcaption>Exploring new groupings for links (Click for full resolution.)</figcaption>
+	</figure>
 				
 				<h3>Improvements to the Discover page</h3>
-				<p>Every new user started off with the "Discover" tool, so it was important that we get this part right. The tool was designed as a virtual deck of cards that a user can flip through and answer crucial questions about their healthcare and funeral/burial preferences. Key changes included:</p>
+				<p>Every new user started with the "Discover" tool, so we needed to get this part right. The tool was designed as a virtual deck of cards that a user can flip through and answer crucial questions about their healthcare and funeral/burial preferences. Key changes included:</p>
+
 				<p>
 				<ul>
 					<li><strong>Card-like Aesthetics:</strong> Redesigned the "Discover" tool to emulate a deck of cards, incorporating rounded corners and themed borders to enhance the visual resemblance to a playing card.</li>
@@ -66,6 +71,13 @@
 					<li><strong>Touch-friendly fields:</strong> Improved mobile usability by enlarging answer buttons, meeting minimum recommended sizing for touch points. Iconography was also introduced to clearly indicate yes/no answers.</li>
 				</ul>
 				</p>
+				
+				<figure class="project-screenshot">
+	<a href="https://aa-portfolio.imgix.net/cake-general-sketch-01.jpg?h=800"><img src="https://aa-portfolio.imgix.net/cake-general-sketch-01.jpg?w=500" alt="sketch" class="add-border"></a>
+	<figcaption>Early sketching (Click for full resolution.)</figcaption>
+	</figure>
+
+	<h4>Screenshots</h4>
 
 								
 				<figure class="project-screenshot">
@@ -84,7 +96,7 @@
 				
 				<h3>Improvements to the Documents page</h3>
 				<p>The Documents page served as the platform for users to upload vital files such as Wills or Health Care Proxy forms. A notable concern was the rigid design that assigned specific slots for document uploads (e.g., Wills could only be uploaded to the "Wills" box).</p>
-				<p>This assumed users (a) had all documents ready, (b) knew each document's purpose, and (c) had no need for uploading documents beyond the provided slots. I proposed the following changes:</p>
+				<p>This approach assumed users (a) had all documents ready, (b) knew each document's purpose, and (c) had no need for uploading documents beyond the provided slots. I proposed the following changes:</p>
 				<p>
 				<ul>
 					<li><strong>Flexible Document Upload:</strong> Instead of confining users to pre-assigned slots, I recommended letting users upload any document they deemed important and subsequently categorize it (i.e. Type) according to their preferences. </li>
@@ -109,9 +121,9 @@
 
 				<h3>Accessibility</h3>
 
-				<p>I applied several trivial fixes that went a long way in improving accessibility scores like adding tab indexes, alt tags and checking for keyboard trapping. And for fun, I ran the site through the JAWS screen reader several times and discovered many opportunities for improvement.</p>
+				<p>I applied several trivial fixes that would go a long way in improving accessibility scores. Changes included adding tab indexes, alt tags and checking for keyboard trapping. And for fun, I ran the site through the JAWS screen reader several times and discovered many opportunities for improvement.</p>
 
-				<p>The site's heavy use of pastel blue was a poor choice for visibiilty. I ran the colors through a contrast ratio test, confirmed that ratio didn't pass, and then introduced colors that passed.</p>
+				<p>The site's heavy use of pastel blue raised concerns about contrast and visibility. I ran the colors through a contrast ratio test, confirmed that the ratio didn't pass, and then introduced new brand colors that passed.</p>
 
 				<figure class="project-screenshot">
 					<a href="https://aa-portfolio.imgix.net/contrast-checker-01.png"><img src="https://aa-portfolio.imgix.net/contrast-checker-01.png?width=600" alt="contrast test result"></a>
@@ -130,11 +142,11 @@
 					<li>Increase to the number of users uploading multiple files</li>
 					<li>Decreased calls to Customer Support</li>
 					<li>Improved Google Lighthouse scores, improving SEO</li>
-					<li>User interviews showed a overall theme of increased trust. (Less use of terms like "sketchy" and "broken".)</li>
+					<li>User interviews showed an overall theme of increased trust. (Less use of terms like "sketchy" and "broken".)</li>
 				</ul>
 				</p>
 				<p>Allowing the user more flexibility in uploading files gave us important insights about <em>what</em> document types were important to them. For example, the page had previously focused on Wills and Health Care Proxies. </p>
-				<p>After the changes, we observed users begin uploading other documents we hadn't thought of -- like family photos and personal notes to loved ones. We learned a lot what our users found important, which helped pave the way for several future improvements to the app.</p>
+				<p>After the changes, we observed users begin uploading other documents we hadn't thought of -- like family photos and personal notes to loved ones. We learned a lot about what our users found important, which helped pave the way for several future improvements to the app.</p>
 
 
 <h3>Link</h3>
