--- a/_source/templates/pages/resume.mustache
+++ b/_source/templates/pages/resume.mustache
@@ -20,152 +20,16 @@
 
 			<section class="skills">
 				<h2>Résumé</h2>
-				<p>Here you'll find a summary of my professional experience. You can also download my résumé in PDF format using the link below.
-				<p><a href="https://docs.google.com/document/d/10BAPJk5CCfoAgxhs-HitiQazVOb2iH9KFSdwtG98NoM/export?format=pdf"><span class="fa fa-file-pdf-o icon-margin-right"></span>PDF download</a></p>
-				<br>
-
-<section class="skills-group work-experience">
-					<h3>Work Experience</h3>
-
-					<ul>
-						<li>					
-							<h4>
-								<span class="title">Principal Front End Developer</span>
-								<span class="company-name">Cake <a href="http://joincake.com" target="_blank"><i class="fa fa-external-link"></i></a> | 2018-2023</span>
-							</h4>
-						</li>
-						<li>
-							<h4>
-								<span class="title">Managing Director of Creative Technology + Front End Developer</span>
-								<span class="company-name">Mad*Pow <a href="http://madpow.com" target="_blank"><i class="fa fa-external-link"></i></a> | 2012-2018</span>
-							</h4>
-						</li>
-						<li>
-							<h4>
-								<span class="title">Founder & Chapter Leader</span>
-								<span class="company-name">Girl Develop It <a href="http://girldevelopit.com" target="_blank"><i class="fa fa-external-link"></i></a> | 2013-2015</span>
-							</h4>
-						</li>
-						<li>
-							<h4>
-								<span class="title">Interactive Developer</span>
-								<span class="company-name">Isobar <a href="http://isobar.com" target="_blank"><i class="fa fa-external-link"></i></a> | 2011-2012</span>
-							</h4>
-						</li>
-						<li>
-							<h4>
-								<span class="title">Web Developer/Designer</span>
-								<span class="company-name">Connelly Partners <a href="https://connellypartners.com/" target="_blank"><i class="fa fa-external-link"></i></a> | 2008-2011</span>
-							</h4>
-						</li>
-					</ul>
+				<p>You can download my résumé in PDF format using the link below. (If you're looking for my Github account, you can find that @ <a href="https://github.com/annetters">https://github.com/annetters</a>)</p>
 
 
+				<a href="https://docs.google.com/document/d/10BAPJk5CCfoAgxhs-HitiQazVOb2iH9KFSdwtG98NoM/export?format=pdf" target="_blank"><img src="https://aa-portfolio.imgix.net/thumbnail-resume.png?h=350" alt="resume" style="border: 1px #ccc solid;"></a> <br />
 
+				<a href="https://docs.google.com/document/d/10BAPJk5CCfoAgxhs-HitiQazVOb2iH9KFSdwtG98NoM/export?format=pdf" target="_blank" style="font-size: 14px; margin-top: 1rem;">arabasz-resume.pdf</a>
 
+			
 
-
-
-
-
-
-				</section>
-				<section class="skills-group languages">
-					<h3>Skills</h3>
-
-					<br>
-
-					<table>
-						<tr>
-							<td width="50%">
-								<h4>Languages and Tools</h4>
-								<ul class="list-skills">
-									<li>HTML</li>
-									<li>CSS
-										<ul>
-											<li>LESS, SCSS</li>
-											<li>Bourbon, Susy</li>
-										</ul>
-									</li>
-									<li>JavaScript
-										<ul>
-											<li>React JS</li>
-											<li>jQuery</li>
-										</ul>
-									</li>
-									<li>NPM, Webpack</li>
-									<li>Yeoman, Grunt, Gulp, Yarn</li>
-									<li>Bootstrap</li>
-									<li>Chakra</li>
-									<li>Foundation</li>
-									<li>Wordpress</li>																		
-									<li>Git</li>					
-								</ul>								
-							</td>
-							<td>
-								<h4>Software</h4>
-								<ul class="list-skills">
-									<li>Visual Studio</li>
-									<li>Visual Studio Code</li>
-								</ul>	
-
-								<h4>Design</h4>
-								<ul class="list-skills">
-									<li>Figma</li>
-									<li>Adobe Photoshop</li>
-									<li>Adobe InDesign</li>
-									<li>UI wireframing and prototyping</li>
-									<li>Information architecture</li>
-									<li>Logos and branding</li>
-								</ul>	
-
-								<h4>Other Skills</h4>						
-								<ul class="list-skills">
-									<li>Certified Scrum Product Owner</li>
-									<li>Bilingual with fluency in Polish</li>
-								</ul>
-							</td>
-						</tr>
-					</table>
-										
-				</section>
-
-				<section class="skills-group">
-					<h3>Education</h3>
-					<br>
-					<h4>University of Massachusetts Dartmouth</h4>
-					<ul>
-						<li>BFA in Graphic Design</li>
-						<li>Minor in Business</li>
-						<li>Graduated as <em>Magna Cum Laude</em></li>	
-					</ul>
-				
-					<h4>University of Hartford</h4>
-					<ul>
-						<li>Graphic Design</li>
-					</ul>
-
-				</section>
-
-				<section class="skills-group">
-					<h3>Speaking & Teaching Engagements</h3>
-					<br>
-					<h4>"Intro to Responsive Web Design"</h4>
-					<p>Bentley University <br>Presentation to 2018 UX Design undergraduate class</p>
-					<p><a href="https://www.slideshare.net/secret/8VxvY1M1PvAgrC"><span class="fa fa-external-link icon-margin-right"></span>View the slide deck.</a></p>	
-
-					<br>
-					<h4>"Responsive Design Process: Building the Real Web 2.0"</h4>
-					<p>UXPA Boston 2013<br>
-					Presented with Nick Snyder</p>
-					<p><a href="https://www.slideshare.net/secret/F4ciYqjeCK6VB5"><span class="fa fa-external-link icon-margin-right"></span>View the slide deck.</a></p>						
-				</section>			
-			</section>			
-		</div>
-
-		{{> partials/footer }}
-
-	</div>
+			</section>
 
 </body>
 </html>
